--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,21 +1,24 @@
-!!!
-%html{:lang => "en"}
+!!!applihtml{:lang => "en"}
 %head
   %meta{:charset => "UTF-8"}/
   %title 19 Seconds | Forum
+  = csrf_meta_tags
   = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
   = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %link{rel: "stylesheet", href: "https://fonts.googleapis.com/css?family=Work+Sans", type: "text/css"}
+  %link{:rel => "stylesheet", :href => "https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css"}/
 
 
 %body
-  %header.main-header.clearfix
-    .header_wrapper
+  .header_wrapper
+    %header.main-header.clearfix
       #logo
         %p= link_to '19 seconds forum', root_path
       .buttons
-        %p= link_to 'New Topic', new_post_path
-
+        %p
+          = link_to 'New Topic', new_post_path
+          = link_to 'Log Out', destroy_user_session_path, method: :delete 
+  %hr/
   .wrapper
     %p.notice= notice
     %p.alert= alert
