--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,10 +1,12 @@
-%h1 Post Show
+.post
+	%h1 Post Show
 
-%h2= @post.title
-%p
-	Posted by  
-	%em= @post.user.username.capitalize
-%p= simple_format @post.content
+	%h2= @post.title
+	%p
+		Posted by  
+		%em= @post.user.username.capitalize
+	%p= simple_format @post.content
+%hr/
 
 = link_to 'Edit', edit_post_path
 = link_to 'Delete'
